tests/errors/meta-function-bad-param.ari
meta fn bad(input: i64) -> token_stream {
}

fn main() -> i64 {
  return 0;
}
